# mynewtowt

./: .env.example  .gitignore  AGENTS.md  AUDIT_COMPLET_2026.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  auth.py  config.py  csrf.py  database.py  main.py  permissions.py  templating.py
app/i18n/: __init__.py  en.py  es.py  fr.py  pt_br.py  vi.py
app/middlewares/: __init__.py  force_password.py  maintenance.py  security_headers.py
app/models/: __init__.py  activity_log.py  analytics_event.py  anemos_certificate.py  blog_post.py  booking.py  booking_message.py  bunker.py  chat.py  claim.py  client_account.py  client_invoice.py  co2_variable.py  commercial.py  contact_request.py  crew.py  crew_ticket.py  emission_factor.py  employee.py  employment_contract.py  env_report.py  escale.py  feature_flag.py  finance.py  flgo.py  generated_report.py  hr_absence.py  hr_review.py  insurance.py  known_device.py  leg.py  leg_attachment.py  mfa_recovery_code.py  mrv.py  mrv_dataset.py  nav_event.py  news_digest.py  news_item.py  news_source.py  noon_report.py  (+28 more)
app/routers/: admin_router.py  api_v1_router.py  booking_router.py  captain_router.py  cargo_packing_router.py  cargo_portal_router.py  cargo_router.py  carnet_bord_router.py  cashbox_router.py  chat_router.py  claims_router.py  client_auth_router.py  client_dashboard_router.py  commercial_router.py  crew_router.py  dashboard_env_router.py  dashboard_perf_router.py  devis_router.py  erp_scaffold_router.py  escale_router.py  finance_router.py  kpi_router.py  marad_router.py  modules_router.py  mrv_router.py  navigation_router.py  notifications_router.py  onboard_router.py  onboard_sales_router.py  planning_router.py  public_router.py  pwa_router.py  rh_router.py  scenario_router.py  seo_router.py  staff_auth_router.py  (+9 more)
caddy/: Caddyfile
docs/: PRODUCTION-NOTEBOOK.md  REFERENCE_STRATEGIQUE_ET_FONCTIONNELLE_NEWTOWT.md  vitrine-construction-plan.md
migrations/: env.py
scripts/: check_api_keys.sh  check_user.py  deploy.sh  git-cleanup.sh  golden_ovd_2025.py  import_mrv_2025.py  install.sh  load_ports.py  marad_probe.py  migrate_orders_to_bookings.py  purge_clients.py  purge_legs.py  purge_onboard_sales_today.py  renumber_legs.py  reset_password.py  seed_carnet.py  seed_demo.py  set_marad_keys.sh  setup_env.sh  verify_signatures.py
tests/: conftest.py
(+838 files in other folders)
