[project]
name = "mynewtowt"
version = "3.0.0"
description = "NEWTOWT ERP & customer platform"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:passlib.*",
    "ignore::DeprecationWarning:itsdangerous.*",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/__init__.py", "app/templates/*", "app/static/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
# Seuil honnête mesuré (26 % réel) avec plan de ratchet validé :
# 25 → 40 → 55 % en ciblant auth / booking / portal (cf. docs/audit/).
# Ne JAMAIS baisser ce seuil ; le monter à chaque jalon de tests.
fail_under = 25
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
# E501 : géré par black (line-length 100).
# RUF001/2/3 : faux positifs unicode sur la prose française des docstrings
# et commentaires (apostrophes typographiques, ×, tirets cadratins).
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.flake8-bugbear]
# Idiome FastAPI : Depends/Form/... en valeur par défaut d'argument.
# Sans cette liste, B008 générait 618 faux positifs.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Path",
    # Fabriques de dépendances internes (idiome RBAC du projet) :
    # Depends(require_permission("module", "C")) sur chaque route protégée.
    "app.permissions.require_permission",
    "app.permissions.require_admin",
]

[tool.ruff.lint.per-file-ignores]
# Les __init__.py de packages ré-exportent volontairement (routers, models).
"**/__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
# TODO ratchet : strict=true était aspirationnel et n'a jamais tourné en CI
# (install cassée). Repasser à strict une fois les routers typés.
strict = false
ignore_missing_imports = true
exclude = ["migrations/versions"]
